tests/fail/semantics/construct_unknown_parent/main.kira
// A construct may only `extends` a construct that is declared locally or imported.
// `WebElement` is never declared, so the parent cannot be resolved.

construct Route extends WebElement {
}

@Main
function main() {
    return
}
